--- a/css/prodtest.css
+++ b/css/prodtest.css
@@ -1005,4 +1005,54 @@ max-width: 60rem;
         padding: 1.5rem 2rem;
     }
 
+    .productpage {
+        flex-direction: column;
+        padding: 0 10px;
+    }
+
+    .gallery {
+        flex-basis: 100%;
+        padding-top: 20px;
+    }
+
+    .gallery img {
+        margin-top: 0;
+        padding-top: 0;
+        transform: scale(1);
+    }
+
+    .details {
+        flex-basis: 100%;
+        padding: 10px;
+        padding-left: 15px;
+    }
+
+    .details h1 {
+        font-size: 20px;
+    }
+
+    .details h2 {
+        font-size: 18px;
+    }
+
+    .color-select {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .color-select p {
+        width: 100%;
+    }
+
+    .color-select span {
+        margin-right: 0;
+        margin-bottom: 8px;
+    }
+
+    form button {
+        font-size: 14px;
+        padding: 8px;
+        margin-top: 20px;
+    }
+
 }
