--- a/css/prodtest.css
+++ b/css/prodtest.css
@@ -24,7 +24,7 @@
 
 .gallery {
     flex-basis: 47%;
-    background: #241e20;
+    background: #F5F1E9;
     padding-top: 100px;
     transform: scale(1.08);
     box-shadow: -10px 5px 10px 10px rgba(0, 0, 0, 0,1);
