--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,8 @@ max-width: 60rem;
 
     font-size: 6rem;
     text-decoration: uppercase;
-    color: #E6B8A2;
+    color: #ffa73d;
+    margin-top: 135px;
     }
 
  .home .content p{
