--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,7 @@ max-width: 60rem;
     text-decoration: uppercase;
     color: #ffa73d;
     margin-top: 135px;
+    margin-bottom: 80px;
     }
 
  .home .content p{
